--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "generate": "node generate.js"
   },
   "devDependencies": {
-    "husky": "^1.3.1",
-    "prettier": "^1.17.0",
+    "husky": "^2.1.0",
+    "prettier": "1.17.0",
     "pretty-quick": "^1.10.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "dependencies": {
     "bitcoinjs-lib": "^5.0.2",
